--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_dialog: ^3.1.0
   badges: ^3.1.1
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
@@ -35,13 +36,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  freezed_annotation: ^2.4.1
   http: ^1.1.0
+  json_annotation: ^4.8.1
   shared_preferences: ^2.2.0
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
